complete jquery traversing and misc

--- a/training/jQuery/jqueryeffect.html
+++ b/training/jQuery/jqueryeffect.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jQuery Effect</title>
     <script src='jquery-3.6.3.js'></script>
-    <script src='main.js'></script>
+    <script src='effectmain.js'></script>
     <style>
         #panel,
         #flip {
