--- a/training/jQuery/jqueryevent.html
+++ b/training/jQuery/jqueryevent.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event</title>
     <script src='jquery-3.6.3.js'></script>
-    <script src='main.js'></script>
+    <script src='eventmain.js'></script>
     <style>
         #panel {
             padding: 50px;
