chang in jQuery test file

--- a/assignment/jQuery/2.html
+++ b/assignment/jQuery/2.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <input type="text" id="input">
-    <br>
-    <button id="btn1" >click me</button>
+
+    <p id="p1">rening num is <span id="sp1"></span></p>
+    
 </body>
 </html>
