complete  php validation

--- a/assignment/jQuery/2.html
+++ b/assignment/jQuery/2.html
@@ -9,7 +9,7 @@
     <script src='2.js'></script>
 </head>
 <body>
-    <input type="text" id="input">
+    <input type="text" id="in1">
 
     <p id="p1">rening num is <span id="sp1"></span></p>
     
